# server-control-panel

./: .clang-format  .editorconfig  .gitmodules  .qmake.conf  .travis.yml  CMakeLists.txt  Changelog.md  README.md  appveyor.yml  build-dependencies-mingw.bat  build-dependencies-msvc.bat  build-dependencies.bat  build.appveyor.xml  build.travis.xml  build.xml  clang-format.bat  common.pri  project-version.pri  scp.pro  wpnxm-servercontrolpanel.pro
cmake/: FindQuazip.cmake  FindYamlCpp.cmake  install_system_runtimes.cmake  install_thirdparty_libs.cmake  windeployqt.cmake
src/: CMakeLists.txt  cli.cpp  cli.h  csv.cpp  csv.h  filehandling.cpp  filehandling.h  ini.cpp  ini.h  jobscheduler.cpp  jobscheduler.h  json.cpp  json.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkutils.cpp  processviewerdialog.cpp  processviewerdialog.h  processviewerdialog.ui  selfupdater.cpp  selfupdater.h  servers.cpp  servers.h  services.cpp  settings.cpp  settings.h  splashscreen.cpp  splashscreen.h  tray.cpp  tray.h  version.h  version_localdev.h  windowsapi.cpp  windowsapi.h
src/app/: app.pro  cli.cpp  cli.h  jobscheduler.cpp  main.cpp  main.h  mainwindow.cpp  mainwindow.h  networkutils.cpp  networkutils.h  selfupdater.cpp  selfupdater.h  servers.cpp  servers.h  settings.cpp  settings.h  splashscreen.cpp  splashscreen.h  tray.cpp  tray.h  version.h.cmake  windowsapi.cpp  windowsapi.h
src/app/config/: configurationdialog.cpp  configurationdialog.h  configurationdialog.ui  nginxaddserverdialog.cpp  nginxaddserverdialog.h  nginxaddserverdialog.ui  nginxaddupstreamdialog.h  pluginlist.ui  pluginlistdelegate.cpp  pluginlistdelegate.h  pluginmanager.cpp  pluginmanager.h  pluginsmanager.cpp  pluginsmanager.h  pluginsmanager.ui
src/app/file/: csv.cpp  filehandling.h  ini.cpp  ini.h  json.cpp  yml.cpp  yml.h
src/app/hostmanager/: adddialog.cpp  adddialog.h  host.cpp  host.h  hostmanagerdialog.cpp  hostmanagerdialog.h  hosttablemodel.cpp  hosttablemodel.h
src/app/main/: main.cpp  main.h
src/app/pluginmanager/: global_plugin_interface.h  plugininterface.cpp  plugininterface.h  pluginmanager.cpp  pluginmanager.h
src/app/plugins/: plugininterface.h  pluginlistdelegate.cpp  pluginlistdelegate.h  pluginmanager.cpp  pluginmanager.h  plugins.cpp  plugins.h
src/app/processviewer/: AlreadyRunningProcessesDialog.cpp  AlreadyRunningProcessesDialog.h  processes.cpp  processes.h  processviewerdialog.cpp  processviewerdialog.h
src/app/registry/: registrymanager.cpp  registrymanager.h
src/app/resources/: application.rc  application_localdev.rc
src/app/tooltips/: BalloonTip.cpp  BalloonTip.h  LabelWithHoverTooltip.cpp  LabelWithHoverTooltip.h
src/app/updater/: actioncolumnitemdelegate.cpp  actioncolumnitemdelegate.h  downloadmanager.cpp  downloadmanager.h  package.cpp  package.h  softwarecolumnitemdelegate.h  transferitem.cpp  updaterdialog.cpp  updaterdialog.h
src/app/widgets/: consoledockwidget.cpp  consoledockwidget.h  qclosedockwidget.h  (+1 more)
src/config/: configurationdialog.cpp  configurationdialog.h  configurationdialog.ui  nginxaddpooldialog.cpp  nginxaddpooldialog.ui  nginxaddserverdialog.cpp  nginxaddserverdialog.h  nginxaddupstreamdialog.cpp  nginxaddupstreamdialog.h
src/core/: CMakeLists.txt  cli.cpp  cli.h  common.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkutils.h  processes.h  selfupdater.cpp  selfupdater.h  servers.cpp  servers.h  services.cpp  services.h  settings.h  splashscreen.cpp  splashscreen.h  tray.cpp  tray.h  windowsapi.cpp  windowsapi.h
src/core/config/: configurationdialog.cpp  configurationdialog.h  nginxaddserverdialog.h  nginxaddupstreamdialog.h  pluginlistdelegate.cpp  pluginlistdelegate.h  pluginsmanager.cpp  pluginsmanager.h  pluginsmanager.ui
src/core/data/: resources.qrc
src/core/file/: csv.h  filehandling.cpp  filehandling.h  ini.h  json.h  yml.cpp  yml.h
src/core/hostmanager/: adddialog.cpp  adddialog.h  host.h  hostmanagerdialog.cpp  hostmanagerdialog.h  hosttablemodel.cpp  hosttablemodel.h
src/core/plugins/: plugininterface.h  pluginproxy.cpp  pluginproxy.h  plugins.cpp  plugins.h
src/core/processviewer/: AlreadyRunningProcessesDialog.cpp  AlreadyRunningProcessesDialog.h  processes.cpp  processes.h  processviewerdialog.cpp  processviewerdialog.h  processviewerdialog.ui
src/core/registry/: registrymanager.cpp  registrymanager.h
src/core/resources/: application.rc
src/core/updater/: actioncolumnitemdelegate.h  downloadmanager.cpp  downloadmanager.h  package.h  softwarecolumnitemdelegate.cpp  softwarecolumnitemdelegate.h  transferitem.cpp  updaterdialog.cpp  updaterdialog.h
src/core/widgets/dockwidgets/: consoledockwidget.cpp  consoledockwidget.h  qclosedockwidget.h
src/core/widgets/tooltips/: BalloonTip.cpp  BalloonTip.h  LabelWithHoverTooltip.h  TrayTooltip.h
src/file/: csv.cpp  csv.h  ini.cpp  json.cpp  json.h  yml.cpp  yml.h
src/hostmanager/: adddialog.cpp  adddialog.h  host.cpp  host.h  hostmanagerdialog.cpp  hostmanagerdialog.h  hostmanagerdialog.ui  hosttablemodel.cpp  hosttablemodel.h
src/main/: CMakeLists.txt  application.rc  main.cpp  main.h
src/plugins/: CMakeLists.txt
src/plugins/HelloWorldPlugin/: CMakeLists.txt  ConfigDialog.cpp  ConfigDialog.h  HelloWorldPlugin.cpp  HelloWorldPlugin.h  HelloWorldPlugin.json  HelloWorldPlugin.pro  configdialog.cpp  configdialog.h  configdialog.ui
src/processviewer/: AlreadyRunningProcessesDialog.cpp  AlreadyRunningProcessesDialog.h  alreadyusedportsdialog.cpp  alreadyusedportsdialog.h  processes.cpp  processes.h  processviewerdialog.cpp  processviewerdialog.h  processviewerdialog.ui
src/registry/: registrymanager.cpp  registrymanager.h
src/resources/: application.rc  resources.qrc
src/tooltips/: BalloonTip.cpp  BalloonTip.h  LabelWithHoverTooltip.cpp  LabelWithHoverTooltip.h  TrayToolTip.cpp  TrayToolTip.h  labelwithhovertooltip.h
src/updater/: actioncolumnitemdelegate.cpp  actioncolumnitemdelegate.h  downloadmanager.cpp  downloadmanager.h  package.cpp  softwarecolumnitemdelegate.cpp  softwarecolumnitemdelegate.h  transferitem.cpp  updaterdialog.cpp  updaterdialog.h
(+12 files in other folders)
